correction affichage logo forget version mobile

--- a/CanvasFront/src/app/components/change-pass/change-pass.component.scss
+++ b/CanvasFront/src/app/components/change-pass/change-pass.component.scss
@@ -276,8 +276,6 @@ img {
   display: block;    
   margin: 0 auto;    
     margin-top: 20px;
-    display: none;
-
 }
 
 
@@ -337,5 +335,7 @@ img {
   .circle-img {
     width: 160px;
     height: 160px;
+   display: block;   
+
   }
 }
